OO-783: better cut value method and gui improvements